<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container_view_tag"
        />

<!--    <com.google.android.material.bottomappbar.BottomAppBar-->
<!--        android:id="@+id/bottomAppBar"-->
<!--        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="42dp"-->
<!--        app:fabCradleRoundedCornerRadius="16dp"-->
<!--        android:layout_gravity="bottom"-->
<!--        app:fabAlignmentMode="center"-->
<!--        app:fabAnimationMode="slide"-->
<!--        app:hideOnScroll="true"-->
<!--        android:backgroundTint="@color/colorPrimaryDark"-->
<!--        app:layout_scrollFlags="scroll|enterAlways"-->
<!--        app:menu="@menu/bottom_nav_menu" />-->

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        style="@style/Widget.MaterialComponents.FloatingActionButton"-->
<!--        android:src="@drawable/ic_add_white_24dp"-->
<!--        app:tint="@android:color/black"-->
<!--        app:backgroundTint="@color/colorAccent"-->
<!--        app:layout_anchor="@id/bottomAppBar" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>